--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".demo.scrolltoolbar.RecyclerViewScrollToolBarActivity"></activity>
+        <activity android:name=".demo.coordinatorlayout_behavior.CoordinatorBehaviorActivity"></activity>
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutCustomBehaviorActivity"/>
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutScrollBehaviorActivity"/>
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.RecyclerViewScrollBehaviorActivity"/>
     </application>
 
 </manifest>
