--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".demo.scrolltoolbar.RecyclerViewScrollToolBarActivity"></activity>
-        <activity android:name=".demo.coordinatorlayout_behavior.CoordinatorBehaviorActivity"></activity>
-        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutCustomBehaviorActivity"/>
-        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutScrollBehaviorActivity"/>
-        <activity android:name=".demo.coordinatorlayout_custom_behavior.RecyclerViewScrollBehaviorActivity"/>
+        <activity android:name=".demo.scrolltoolbar.RecyclerViewScrollToolBarActivity" />
+        <activity android:name=".demo.coordinatorlayout_behavior.CoordinatorBehaviorActivity" />
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutCustomBehaviorActivity" />
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutScrollBehaviorActivity" />
+        <activity android:name=".demo.coordinatorlayout_custom_behavior.RecyclerViewScrollBehaviorActivity" />
+        <activity android:name=".demo.parallelviewpager.ParalleViewPagerActivity"></activity>
     </application>
 
 </manifest>
