--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutCustomBehaviorActivity" />
         <activity android:name=".demo.coordinatorlayout_custom_behavior.CoordinatorLayoutScrollBehaviorActivity" />
         <activity android:name=".demo.coordinatorlayout_custom_behavior.RecyclerViewScrollBehaviorActivity" />
-        <activity android:name=".demo.parallelviewpager.ParalleViewPagerActivity"></activity>
+        <activity android:name=".demo.parallelviewpager.ParalleViewPagerActivity" />
+        <activity android:name=".demo.coordinatorlayout_appbarlayout.AppbarLayoutActivity" />
+        <activity android:name=".demo.appbarLayout_tablayout_viewpager.AppBarTabLayoutViewPagerActivity"></activity>
     </application>
 
 </manifest>
