添加固定Toolbar折叠布局
添加固定Toolbar折叠布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <activity android:name=".demo.parallelviewpager.ParalleViewPagerActivity" />
         <activity android:name=".demo.coordinatorlayout_appbarlayout.AppbarLayoutActivity" />
         <activity android:name=".demo.appbarLayout_tablayout_viewpager.AppBarTabLayoutViewPagerActivity" />
-        <activity android:name=".demo.appbarlayout_collapsingtoolbarlayout.CollapsingToolbarActivity"></activity>
+        <activity android:name=".demo.appbarlayout_collapsingtoolbarlayout.CollapsingToolbarActivity" />
+        <activity android:name=".demo.collapsingtoolbarlayout_two.CollapsingToolbarLayoutActivity" />
+        <activity android:name=".demo.collapsingtoolbarlayout_two.ToolbarAnchorActivity"></activity>
     </application>
 
 </manifest>
