--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".demo.appbarlayout_collapsingtoolbarlayout.CollapsingToolbarActivity" />
         <activity android:name=".demo.collapsingtoolbarlayout_two.CollapsingToolbarLayoutActivity" />
         <activity android:name=".demo.collapsingtoolbarlayout_two.ToolbarAnchorActivity" />
-        <activity android:name=".demo.meterial_design_animation.ReveralAnimationActivity"></activity>
+        <activity android:name=".demo.meterial_design_animation.ReveralAnimationActivity" />
+        <activity android:name=".demo.custom_animation_frame.CustomAnimationFrameActivity"></activity>
     </application>
 
 </manifest>
