--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,17 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary = true
+//        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
     }
 }
 
@@ -27,4 +31,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
