添加多种自定义侧滑方式
添加多种自定义侧滑方式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:name=".demo.svg_vector.SVGVectorActivity"
             android:label="@string/title_activity_svgvector"
             android:theme="@style/AppTheme" />
-        <activity android:name=".demo.scroller.CustomSlideMenuActivity"></activity>
+        <activity android:name=".demo.scroller.CustomSlideMenuActivity" />
+        <activity android:name=".demo.scroller.CustomSlideMenu2Activity"></activity>
     </application>
 
 </manifest>
