--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/nineoldandroids-2.4.0.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
