--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'cn.jiajixin.nuwa'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -14,14 +14,16 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
-    aaptOptions {
-        additionalParameters "--no-version-vectors"
-    }
+
 }
 
 dependencies {
@@ -33,4 +35,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'cn.jiajixin.nuwa:nuwa:1.0.0'
 }
