--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.qiyue.materialdesignadvance">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".MApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -44,7 +46,8 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".demo.paint.ShaderActivity" />
-        <activity android:name=".demo.paint.LinearGradientActivity"></activity>
+        <activity android:name=".demo.paint.LinearGradientActivity" />
+        <activity android:name=".demo.hotfix.HotFixActivity"></activity>
     </application>
 
 </manifest>
